<resources>
    <string name="app_name">Idezetek</string>
    <string name="toast_feature_not_implemented">This feature is not implemented</string>
    <string name="settings_app_markup_support">Markup support</string>
    <string name="settings_app_markup_support_summary">Allow HTML formatting in quotes.</string>
    <string name="settings_app_show_author">Show author</string>
    <string name="settings_app_show_quote_number">Show quote number</string>
    <string name="settings_widget_show_author">Show author</string>
    <string name="settings_widget_show_quote_number">Show quote number</string>
    <string name="settings_widget_show_prev_next_buttons">Show previous/next buttons</string>
    <string name="quote_books_activity_title">Quote books</string>
    <string name="quote_books_import_action">Import</string>
    <string name="quote_books_add_action">Create new</string>
    <string name="quote_books_share_action">Share</string>
    <string name="quote_books_settings_action">Settings</string>
    <string name="import_dialog_title">Book title</string>
    <string name="import_toast_pick_book">Pick a book to import</string>
    <string name="title_exists">A book with this title already exists</string>
    <string name="title_invalid">Invalid title</string>
    <string name="import_failed">Cannot import</string>
    <string-array name="quote_books_context_menu">
        <item>Rename</item>
        <item>Delete</item>
    </string-array>
    <string name="book_delete_dialog_title">Delete book</string>
    <string name="book_delete_dialog_message">Are you sure you want to delete \"%1$s\"?</string>
    <string name="quotes_jump_to_quote">Jump to quote</string>
    <string name="quotes_search_quote">Search</string>
    <string name="quotes_toast_longtap_help">Long tap quote to set on widget</string>
    <string-array name="quotes_context_menu_for_widget">
        <item>Set to widget</item>
        <item>Delete</item>
    </string-array>
    <string-array name="quotes_context_menu">
        <item>Delete</item>
    </string-array>
    <string name="quote_editor_activity_title">Edit quote</string>
    <string name="quote_editor_done">Done</string>
    <string name="quote_editor_author">Author</string>
    <string name="quote_editor_author_hint">Name</string>
    <string name="quote_editor_quote">Quote</string>
    <string name="quote_editor_quote_hint">Write the quote here</string>
</resources>
